syntax = "proto2";
package bm;


message UpdateLobbyReq {
  enum Action {
    ENTER = 0;
    EXIT = 1;
  }
  
  required int32 id = 1;
  required Action action = 2;
}

message UpdateLobbyResp {
  enum Status {
    OK = 0;
    LOBBY_FULL = 1;
    LOBBY_NONEXISTENT = 2;
  }

  required Status status = 1;
}
